objects/Survey_Case_Log__c.object
<CustomObject>
    <description>Store requests sent to SoundBite for survey generation</description>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Case Log</relationshipLabel>
        <relationshipName>Survey_Case_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <description>copy of the Case Closed Date/Time field</description>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Timestamp__c</fullName>
        <description>timestamp when request has been generated</description>
        <label>Request Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Survey Case Log</label>
    <nameField>
        <label>Survey Case Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Case Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>